[tool.poetry]
name = "flake8-test-docs"
version = "1.0.5"
description = "A linter that checks test docstrings for the arrange/act/assert structure"
authors = ["David Andersson <david@jdkandersson.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "flake8_test_docs.py"}]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
mypy = "^0.991"
isort = "^5"
black = "^22"
coverage = {extras = ["toml"], version = "^6"}
pytest-cov = "^4"
flake8-docstrings = "^1"
flake8-builtins = "^2"
pep8-naming = "^0"
codespell = "^2"
pylint = "^2"
pydocstyle = "^6"
toml = "^0"
astpretty = "^3"
hypothesis = "^6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
TDO = "flake8_test_docs:Plugin"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"
extra_standard_library = ["tomllib"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
ignore_missing_imports = true
