[tool.poetry]
name = "flake8-test-docs"
version = "1.0.8"
description = "A linter that checks test docstrings for the arrange/act/assert structure"
authors = ["David Andersson <david@jdkandersson.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "flake8_test_docs.py"}]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = ">= 5"
typing_extensions = { version = "^4", python = "<3.10" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
TDO = "flake8_test_docs:Plugin"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"
extra_standard_library = ["tomllib"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "wrong-import-position"
]
